structural-typing/tests/ui/empty_struct_rejected.stderr
error: #[structural] requires at least one field
 --> tests/ui/empty_struct_rejected.rs:4:1
  |
4 | struct Empty {}
  | ^^^^^^^^^^^^^^^
