structural-typing/tests/ui/empty_struct_rejected.rs
use structural_typing::structural;

#[structural]
struct Empty {}

fn main() {}
